# SamsungGear360

./: .gitignore  README.md
cpp/: CMakeLists.txt  Gear360Stream.cpp  Gear360Viewer.cpp  README.md  calibration.toml  config.cpp  config.h  main.cpp  pyvenv.cfg  renderer.cpp  renderer.h  stitching.cpp  stitching.h  toml_parser.h  video_decoder.cpp  video_decoder.h
cpp/shaders/: fragment.glsl  helpers.glsl  masks.glsl  projections.glsl  shaders.cpp  shaders.h  stitching.glsl  uniforms.glsl
python/: .gitignore  README.md  gear360_viewer.py  pyvenv.cfg
python/camera_calibration/: .gitignore  README.md  __init__.py  alignment.py  calibrate_adjoint.py  calibrate_stepwise.py  calibrate_stitching.py  calibration_config.py  create_calibration.py  fisheye_to_equirect.py  fov_optimization.py  lens_detection.py  masks.py  projection.py  pyvenv.cfg  rotation_estimation.py  seam_refinement.py  tracking.py
python/camera_calibration/calib/: __init__.py  calibration_config.py  calibration_config_example.toml  calibration_example.json  sample_calibration.json
python/camera_calibration/projections/: __init__.py  fisheye_to_equirect.py  fisheye_to_equirectangular.py  fisheye_to_rectilinear.py
python/camera_calibration/solvers/: __init__.py  calibrate_adjoint.py  calibrate_stepwise.py  requirements.txt  tracking.py
